k8s/apps/konomitv/lily/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: konomitv
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
