k8s/apps/konomitv/lily/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`konomitv.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`konomitv.starry.blue`)
      priority: 10
      services:
        - name: service
          port: 7000
          scheme: https
          serversTransport: patch-hostname
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik

    - kind: Rule
      match: Host(`konomitv.starry.blue`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: http

    - kind: Rule
      match: Host(`konomitv.starry.blue`) && PathPrefix(`/sw.js`)
      priority: 20
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirect-to-404

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-404

spec:
  replacePathRegex:
    regex: ".*"
    replacement: /404.html
